1.多环境配置 2.order test case

--- a/src/main/filters/filter_test.properties
+++ b/src/main/filters/filter_test.properties
@@ -1,7 +1,7 @@
 # test??
 Environment=test
-baseURI=http://bookstore.toolsqa.com
-basePath=v1/gateway.do
+baseURI=https://petstore3.swagger.io
+basePath=api/v3/store
 port=8187
 
 #mysql db
