--- a/src/main/resources/env.properties
+++ b/src/main/resources/env.properties
@@ -2,3 +2,6 @@ Environment=${Environment}
 baseURI=${baseURI}
 basePath=${basePath}
 port=${port}
+DP_Name=${DP_Name}
+DP_Password=${DP_Password}
+DP_IP=${DP_IP}
