--- a/pom.xml
+++ b/pom.xml
@@ -117,13 +117,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20.1</version>
+                <version>2.22.2</version>
                 <configuration>
                     <!--跳过测试代码执行-->
                     <!--<skipTests>true</skipTests>-->
                     <!--忽略测试代码执行失败-->
-                    <forkMode>once</forkMode>
-                    <argLine>-Dfile.encoding=UTF-8 -Xmx1024m -XX:MaxPermSize=256m</argLine>
+<!--                    <forkMode>once</forkMode>-->
+<!--                    <argLine>-Dfile.encoding=UTF-8 -Xmx1024m -XX:MaxPermSize=256m</argLine>-->
                     <testFailureIgnore>true</testFailureIgnore>
                     <suiteXmlFiles>
                         <!--suppress UnresolvedMavenProperty -->
